--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -59,7 +59,7 @@ window#waybar {
 
 #workspaces button {
     padding: 2px 0px;
-    border-bottom: 2px;
+    border-bottom: 4px;
     color: #eceff4;
     border-color: #d8dee9;
     border-style: solid;
@@ -67,7 +67,7 @@ window#waybar {
 }
 
 #workspaces button.active {
-    border-color: #81a1c1;
+    border-color: #5171f1;
 }
 
 #clock, #battery, #cpu, #memory,#idle_inhibitor, #temperature,#custom-keyboard-layout, #backlight, #network, #pulseaudio, #tray, #window,#custom-launcher,#custom-power,#custom-updates ,#custom-network_traffic,#custom-weather,
